# logos-plugin-qt

./: README.md  flake.nix
.github/workflows/: ci.yml
cmake/: LogosModule.cmake  LogosViewPluginBase.cpp.in  LogosViewPluginBase.h.in  LogosViewReplicaFactory.cpp.in  LogosViewReplicaFactory.h.in
lib/: buildHeaders.nix  buildPlugin.nix  common.nix  default.nix
tests/: test-rep-file-plugin.nix  test-vanilla-plugin.nix
tests/rep-file-plugin/: CMakeLists.txt  rep_test.rep
tests/vanilla-plugin/: CMakeLists.txt  interface.h  metadata.json  vanilla_test_plugin.h
